<resources>
    <string name="app_name">EasyWait</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="num_reservations"># Reservations: </string>
    <string name="average_wait">Average wait</string>
    <string name="notify_next">Notify Next</string>
    <string name="new_reservation">New Reservation</string>
    <string name="seat_next">Seat Next</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="num_people">Number of People</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_acc">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="no_account">No account yet? Create one</string>
</resources>
